objects/BMCServiceDesk__TaskHistory__c.object
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpTaskHistory</customHelpPage>
    <description>This object allows you to store data that tracks the history of all actions that have been performed on tasks.</description>
    <fields>
        <fullName>BMCServiceDesk__Action_Duration__c</fullName>
        <formula>(VALUE(LEFT(BMCServiceDesk__duration__c , 2))*60)+( VALUE(RIGHT(BMCServiceDesk__duration__c, 2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__EmailConversationData__c</fullName>
        <description>Stores email addresses (From, To, and CC) of the email message.</description>
        <label>Email Addresses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKAction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>From the list of options, select the user-defined actions that are applicable to tasks. User-defined actions are used to record details of the each step taken to complete the task.</inlineHelpText>
        <label>Action</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>BMCServiceDesk__Action__c.BMCServiceDesk__appliesToTask__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Action__c.BMCServiceDesk__inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>BMCServiceDesk__Action__c.BMCServiceDesk__Display_In_SelfService__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>BMCServiceDesk__Action__c</referenceTo>
        <relationshipLabel>Task History</relationshipLabel>
        <relationshipName>Task_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff.</inlineHelpText>
        <label>Staff ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Task_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKWO__c</fullName>
        <label>Task #</label>
        <referenceTo>BMCServiceDesk__Task__c</referenceTo>
        <relationshipLabel>Action History</relationshipLabel>
        <relationshipName>Task_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Reply__c</fullName>
        <description>This field should be added to Remedyforce Task layout for replying to emails.</description>
        <formula>IF( BMCServiceDesk__FKAction__r.BMCServiceDesk__Abbreviation__c ==&apos;EMAILOUT&apos; || BMCServiceDesk__FKAction__r.BMCServiceDesk__Abbreviation__c ==&apos;EMAILIN&apos;, HYPERLINK(&quot;javascript:if(window.location.href!=null){var stdurl= window.location.href;if(stdurl.toLowerCase().indexOf(&apos;relatedlist?&apos;)!= -1){window.location.href=&apos;/apex/BMCServiceDesk__ComposeEmailPage?recordId=&quot;+BMCServiceDesk__FKWO__r.Id+&quot;&amp;HistoryId=&quot;+ Id+&quot;&amp;isNew=false&amp;objectName=Task__c&amp;standardLayout=true&amp;isCalledFromConsole=true&amp;stdform=true&amp;actionType=&quot;+ BMCServiceDesk__FKAction__r.Name +&quot;&apos;}else{window.location.href=&apos;/apex/BMCServiceDesk__ComposeEmailPage?recordId=&quot;+BMCServiceDesk__FKWO__r.Id+&quot;&amp;HistoryId=&quot;+ Id+&quot;&amp;isNew=false&amp;objectName=Task__c&amp;standardLayout=true&amp;isCalledFromConsole=false&amp;stdform=true&amp;actionType=&quot;+ BMCServiceDesk__FKAction__r.Name +&quot;&apos;}}&quot;,IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/b_reply_to_client_email.png&quot;, &quot;Reply&quot;),&apos;_self&apos;),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reply</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Reply_task_console__c</fullName>
        <description>This field should be added to Console layout for replying to emails from task console.</description>
        <formula>IF( BMCServiceDesk__FKAction__r.BMCServiceDesk__Abbreviation__c ==&apos;EMAILOUT&apos; || BMCServiceDesk__FKAction__r.BMCServiceDesk__Abbreviation__c ==&apos;EMAILIN&apos;, HYPERLINK(&quot;javascript:if(window.location.href!=null){var stdurl= window.location.href;if(stdurl.toLowerCase().indexOf(&apos;relatedlist?&apos;)!= -1){window.location.href=&apos;/apex/BMCServiceDesk__ComposeEmailPage?recordId=&quot;+BMCServiceDesk__FKWO__r.Id+&quot;&amp;HistoryId=&quot;+ Id+&quot;&amp;isNew=false&amp;objectName=Task__c&amp;standardLayout=true&amp;isCalledFromConsole=true&amp;stdform=true&amp;actionType=&quot;+ BMCServiceDesk__FKAction__r.Name +&quot;&apos;}else{window.location.href=&apos;/apex/BMCServiceDesk__ComposeEmailPage?recordId=&quot;+BMCServiceDesk__FKWO__r.Id+&quot;&amp;HistoryId=&quot;+ Id+&quot;&amp;isNew=false&amp;objectName=Task__c&amp;standardLayout=true&amp;isCalledFromConsole=false&amp;stdform=true&amp;actionType=&quot;+ BMCServiceDesk__FKAction__r.Name +&quot;&apos;}}&quot;,IMAGE(&quot;/resource/BMCServiceDesk__SDEFStyles/SDEFbuttons/b_reply_to_client_email.png&quot;, &quot;Reply&quot;),&apos;_self&apos;),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reply</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RichTextNote__c</fullName>
        <description>This field used to store the rich Text Email conversation.</description>
        <label>RichTextNote</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__action_Id__c</fullName>
        <formula>BMCServiceDesk__FKAction__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the list of options, select the user-defined actions that are applicable to tasks. User-defined actions are used to record details of the each step taken to complete the task.</inlineHelpText>
        <label>Action~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__date__c</fullName>
        <inlineHelpText>This field is automatically set to the date and time at which the history record is created. If required, you can use this field to select a different date and time from the automatically filled in date and time for user-defined actions.</inlineHelpText>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__description__c</fullName>
        <inlineHelpText>This field is automatically set to the description of the user-defined action selected in the Action ID field. This description explains what the selected Action ID represents.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__duration__c</fullName>
        <inlineHelpText>Use this field to enter the time that you spend performing this action.</inlineHelpText>
        <label>Duration</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__emailToFrom__c</fullName>
        <label>Email (To/From)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the task record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__note__c</fullName>
        <inlineHelpText>Use this field to provide details about what has been accomplished when you performed this action. The date and time is recorded for each new entry or update that you make in this field.</inlineHelpText>
        <label>Note</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__system__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__taskId__c</fullName>
        <formula>BMCServiceDesk__FKWO__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task #~</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__user_Id__c</fullName>
        <formula>BMCServiceDesk__FKUser__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff.</inlineHelpText>
        <label>Staff ID~</label>
        <type>Text</type>
    </fields>
    <label>Task History</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task History ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BMCServiceDesk__actionIDRequired</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FKAction__c) , ISBLANK(BMCServiceDesk__FKAction__c))</errorConditionFormula>
        <errorMessage>Please enter Action.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__staffIDRequired</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISNULL(BMCServiceDesk__FKUser__c) , ISBLANK(BMCServiceDesk__FKUser__c))</errorConditionFormula>
        <errorMessage>Please enter Staff ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BMCServiceDesk__taskHistoryDurationFormatValidation</fullName>
        <active>true</active>
        <description>duration should be in format hh:mm</description>
        <errorConditionFormula>AND(NOT(REGEX( BMCServiceDesk__duration__c , &apos;[0-9]{2}:[0-9]{2}&apos;)), NOT(OR(ISNULL(BMCServiceDesk__duration__c), ISBLANK(BMCServiceDesk__duration__c) )  ))</errorConditionFormula>
        <errorMessage>Please enter duration in the format hh:mm</errorMessage>
    </validationRules>
</CustomObject>